@@ -126,10 +126,13 @@ fcntl(int file_descriptor, int cmd, ... /* int arg */ )
 
 			SHOWMSG("cmd=F_GETFL");
 
+			result = 0;
+
 			if(FLAG_IS_SET(fd->fd_Flags,FDF_NON_BLOCKING))
-				result = O_NONBLOCK;
-			else
-				result = 0;
+				SET_FLAG(result,O_NONBLOCK);
+
+			if(FLAG_IS_SET(fd->fd_Flags,FDF_ASYNC_IO))
+				SET_FLAG(result,O_ASYNC);
 
 			break;
 
@@ -166,6 +169,31 @@ fcntl(int file_descriptor, int cmd, ... /* int arg */ )
 					SET_FLAG(fd->fd_Flags,FDF_NON_BLOCKING);
 				else
 					CLEAR_FLAG(fd->fd_Flags,FDF_NON_BLOCKING);
+			}
+
+			if((FLAG_IS_SET(flags,O_ASYNC) && FLAG_IS_CLEAR(fd->fd_Flags,FDF_ASYNC_IO)) ||
+			   (FLAG_IS_CLEAR(flags,O_ASYNC) && FLAG_IS_SET(fd->fd_Flags,FDF_ASYNC_IO)))
+			{
+				message.action	= file_hook_action_set_async;
+				message.block	= FLAG_IS_SET(flags,O_ASYNC);
+
+				assert( fd->fd_Hook != NULL );
+
+				CallHookPkt(fd->fd_Hook,fd,&message);
+
+				result = message.result;
+				if(result < 0)
+				{
+					errno = message.error;
+
+					va_end(arg);
+					goto out;
+				}
+
+				if(FLAG_IS_SET(flags,O_ASYNC))
+					SET_FLAG(fd->fd_Flags,FDF_ASYNC_IO);
+				else
+					CLEAR_FLAG(fd->fd_Flags,FDF_ASYNC_IO);
 			}
 
 			va_end(arg);
